<resources>
    <string name="app_name">AppHub</string>
    <string name="hub_title">Hub de Aplicativos</string>
    <string name="btn_calculadora">Calculadora Científica</string>
    <string name="btn_contador">Contador de Pontos</string>
    <string name="btn_lista_compras">Lista de Compras</string>
    <string name="add_a_new_item">Adicionar Novo Item</string>
    <string name="lista_de_compras">Lista de Compras</string>
    <string name="nome_do_item">Nome do Item</string>
    <string name="sample_text">Sample Text</string>
    <string name="deletar_item">Deletar Item</string>
    <string name="editar_item">Editar Item</string>
    <string name="salvar_item">Salvar Item</string>
    <string name="voltar">Voltar</string>
    <string name="abrir_lista">Abrir Lista</string>
    <string name="voltar_para_o_hub">Voltar Para o Hub</string>
    <string name="escolha_a_modalidade">Escolha a Modalidade</string>
    <string name="ver_historico">Ver Histórico</string>
    <string name="basquete">Basquete</string>
    <string name="futebol">Futebol</string>
    <string name="volei">Vôlei</string>
    <string name="volei_de_areia">Vôlei de Areia</string>
    <string name="tenis">Tênis</string>
    <string name="tenis_de_mesa">Tênis de Mesa</string>
    <string name="rugby">Rugby</string>
    <string name="livre">Livre</string>
    <string name="time_a">Time A</string>
    <string name="_3_pontos">+3 PONTOS</string>
    <string name="_2_pontos">+2 PONTOS</string>
    <string name="tiro_livre">Tiro Livre</string>
    <string name="time_b">Time B</string>
    <string name="reiniciar_partida">Reiniciar Partida</string>
    <string name="configuracoes_da_partida">Configurações da Partida</string>
    <string name="nome_do_time_a">Nome do Time A</string>
    <string name="nome_do_time_b">Nome do Time B</string>
    <string name="limite_de_pontos_opcional">Limite de Pontos (Opcional)</string>
    <string name="iniciar_partida">Iniciar Partida</string>
    <string name="_1_ponto">+1 PONTO</string>
    <string name="_5_pontos">+5 PONTOS</string>
    <string name="gol">GOL</string>
    <string name="_15_pontos">+15 PONTOS</string>
    <string name="_10_pontos">+10 PONTOS</string>
    <string name="partida">Partida</string>
    <string name="encerrar_partida">Encerrar Partida</string>
    <string name="historico_de_partidas">Histórico de Partidas</string>
    <string name="nenhuma_partida_registrada_ainda">Nenhuma partida registrada ainda</string>
    <string name="limpar_historico">Limpar histórico</string>
    <string name="deletar_jogo">Deletar Jogo</string>
    <string name="o_que_voc_deseja_fazer_hoje">O que você deseja fazer hoje?</string>
</resources>