<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.apphub.matchPointsCounter.ui.main.MatchPointsActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_menu_revert"
        android:visibility="gone"
        tools:visibility="visible"
        android:elevation="10dp"
        android:contentDescription="@string/voltar"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/timeA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/time_a"
                android:textSize="14sp"
                android:fontFamily="sans-serif"/>

            <TextView
                android:id="@+id/placarTimeA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="0"
                android:textSize="54sp"
                android:fontFamily="sans-serif"/>

            <Button
                android:id="@+id/tresPontosA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/_3_pontos" />

            <Button
                android:id="@+id/doisPontosA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/_2_pontos" />

            <Button
                android:id="@+id/tiroLivreA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/tiro_livre" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/time_b"
                android:textSize="14sp"
                android:fontFamily="sans-serif"/>

            <TextView
                android:id="@+id/placarTimeB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="0"
                android:textSize="54sp"
                android:fontFamily="sans-serif"/>

            <Button
                android:id="@+id/tresPontosB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/_3_pontos" />

            <Button
                android:id="@+id/doisPontosB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/_2_pontos" />

            <Button
                android:id="@+id/tiroLivreB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/tiro_livre" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reiniciarPartida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reiniciar_partida"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"/>
</RelativeLayout>
